Nikola auto commit.
Source commit: cf705674ce352204cc650b0b0af8c8c947c0fcee
Nikola version: 7.7.4

--- a/galleries/index.html
+++ b/galleries/index.html
@@ -78,10 +78,16 @@
 
 <div id="gallery_container"></div>
 <noscript>
-<ul class="thumbnails"><li>
+<ul class="thumbnails">
+<li>
+<a href="flavio.coelho_0.jpg" class="thumbnail image-reference" title="Flavio coelho 0">
+            <img src="flavio.coelho_0.thumbnail.jpg" alt="Flavio coelho 0"></a>
+        </li>
+<li>
 <a href="site_conference_ok.png" class="thumbnail image-reference" title="Site conference ok">
             <img src="site_conference_ok.thumbnail.png" alt="Site conference ok"></a>
-</li></ul>
+</li>
+</ul>
 </noscript>
 
         </div>
@@ -99,7 +105,7 @@
     moment.locale("en");
     fancydates(0, "YYYY-MM-DD HH:mm");
     </script><!-- end fancy dates --><script src="../assets/js/flowr.plugin.js"></script><script>
-jsonContent = [{"size": {"h": 311, "w": 720}, "title": "Site conference ok", "url": "site_conference_ok.png", "url_thumb": "site_conference_ok.thumbnail.png"}];
+jsonContent = [{"size": {"h": 180, "w": 120}, "title": "Flavio coelho 0", "url": "flavio.coelho_0.jpg", "url_thumb": "flavio.coelho_0.thumbnail.jpg"}, {"size": {"h": 311, "w": 720}, "title": "Site conference ok", "url": "site_conference_ok.png", "url_thumb": "site_conference_ok.thumbnail.png"}];
 $("#gallery_container").flowr({
         data : jsonContent,
         height : 180*.6,
