--- a/stories/team/index.html
+++ b/stories/team/index.html
@@ -18,7 +18,7 @@
 Error in "image" directive:
 no content permitted.
 
-.. image:: flavio.coelho_0.jpg
+.. image:: /galleries/flavio.coelho_0.jpg
 
     Flávio Codeço Coelho, Associate Professor'>
 <meta property="og:type" content="article">
@@ -91,7 +91,7 @@ no content permitted.
 <p>Error in "image" directive:
 no content permitted.</p>
 <pre class="literal-block">
-.. image:: flavio.coelho_0.jpg
+.. image:: /galleries/flavio.coelho_0.jpg
 
     Flávio Codeço Coelho, Associate Professor
 </pre>
