Nikola auto commit.
Source commit: 02e19a21466c74394fa88e4ff94e360058f3691c
Nikola version: 7.7.5

--- a/es/galleries/index.html
+++ b/es/galleries/index.html
@@ -58,6 +58,10 @@
 <li>
 <a href="../../galleries/site_conference_ok.png" class="thumbnail image-reference" title="Site conference ok">
             <img src="../../galleries/site_conference_ok.thumbnail.png" alt="Site conference ok"></a>
+        </li>
+<li>
+<a href="../../galleries/logo.png" class="thumbnail image-reference" title="Logo">
+            <img src="../../galleries/logo.thumbnail.png" alt="Logo"></a>
 </li>
 </ul>
 </noscript>
