--- a/galleries/index.html
+++ b/galleries/index.html
@@ -58,6 +58,10 @@
 <li>
 <a href="site_conference_ok.png" class="thumbnail image-reference" title="Site conference ok">
             <img src="site_conference_ok.thumbnail.png" alt="Site conference ok"></a>
+        </li>
+<li>
+<a href="logo.png" class="thumbnail image-reference" title="Logo">
+            <img src="logo.thumbnail.png" alt="Logo"></a>
 </li>
 </ul>
 </noscript>
