--- a/pt/galleries/index.html
+++ b/pt/galleries/index.html
@@ -58,6 +58,10 @@
 <li>
 <a href="../../galleries/site_conference_ok.png" class="thumbnail image-reference" title="Site conference ok">
             <img src="../../galleries/site_conference_ok.thumbnail.png" alt="Site conference ok"></a>
+        </li>
+<li>
+<a href="../../galleries/logo.png" class="thumbnail image-reference" title="Logo">
+            <img src="../../galleries/logo.thumbnail.png" alt="Logo"></a>
 </li>
 </ul>
 </noscript>
