Nikola auto commit.
Source commit: bbf1d450aaa734810fc505d913056f1900ee34bb
Nikola version: 7.7.5

--- a/es/galleries/index.html
+++ b/es/galleries/index.html
@@ -60,6 +60,10 @@
             <img src="../../galleries/site_conference_ok.thumbnail.png" alt="Site conference ok"></a>
         </li>
 <li>
+<a href="../../galleries/logo-emap.png" class="thumbnail image-reference" title="Logo emap">
+            <img src="../../galleries/logo-emap.thumbnail.png" alt="Logo emap"></a>
+        </li>
+<li>
 <a href="../../galleries/logo.png" class="thumbnail image-reference" title="Logo">
             <img src="../../galleries/logo.thumbnail.png" alt="Logo"></a>
 </li>
