--- a/galleries/index.html
+++ b/galleries/index.html
@@ -60,6 +60,10 @@
             <img src="site_conference_ok.thumbnail.png" alt="Site conference ok"></a>
         </li>
 <li>
+<a href="logo-emap.png" class="thumbnail image-reference" title="Logo emap">
+            <img src="logo-emap.thumbnail.png" alt="Logo emap"></a>
+        </li>
+<li>
 <a href="logo.png" class="thumbnail image-reference" title="Logo">
             <img src="logo.thumbnail.png" alt="Logo"></a>
 </li>
