Nikola auto commit.
Source commit: 6b1699654f09f9a3a40d2c34b12dc11e102bd78e
Nikola version: 7.7.5

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ fb: http://ogp.me/ns/fb#
  
             <h1 class="title-blog">
                 <a href="https://Epidemiologia.github.io/">
-                        <img src="galleries/logo.png" alt="Mathematical Epidemiology" id="logo"></a>
+                        <img src="galleries/logo_pq.png" alt="Mathematical Epidemiology" id="logo"></a>
             </h1>
           </div>
         </div>
@@ -145,29 +145,29 @@ fb: http://ogp.me/ns/fb#
             <script src="assets/js/all-nocdn.js"></script><script>
                 var links = [
                         {
-                            "icon": "<i class='fa fa-share-square-o'></i>",
                             "bgcolor": "#F44336",
+                            "icon": "<i class='fa fa-share-square-o'></i>",
                         },
                         {
+                            "target": "_blank",
                             "url": "https://twitter.com/",
-                            "target": "_blank",
-                            "icon": "<i class='fa fa-twitter'></i>",
+                            "color": "#fffff",
                             "bgcolor": "#55ACEE",
-                            "color": "#fffff",
+                            "icon": "<i class='fa fa-twitter'></i>",
                         },
                         {
+                            "target": "_blank",
                             "url": "https://github.com/",
-                            "target": "_blank",
-                            "icon": "<i class='fa fa-github-square'></i>",
-                            "bgcolor": "#666666",
                             "color": "#fffff",
+                            "bgcolor": "#666666",
+                            "icon": "<i class='fa fa-github-square'></i>",
                         },
                         {
-                            "url": "https://www.facebook.com",
                             "target": "_blank",
-                            "icon": "<i class='fa fa-facebook'></i>",
-                            "bgcolor": "#3B5998",
+                            "url": "https://www.facebook.com",
                             "color": "#fffff",
+                            "bgcolor": "#3B5998",
+                            "icon": "<i class='fa fa-facebook'></i>",
                         },
                 ];
 
