--- a/galleries/index.html
+++ b/galleries/index.html
@@ -44,7 +44,7 @@ fb: http://ogp.me/ns/fb#
  
             <h1 class="title-blog">
                 <a href="https://Epidemiologia.github.io/">
-                        <img src="galleries/logo.png" alt="Mathematical Epidemiology" id="logo"></a>
+                        <img src="galleries/logo_pq.png" alt="Mathematical Epidemiology" id="logo"></a>
             </h1>
           </div>
         </div>
@@ -92,6 +92,10 @@ fb: http://ogp.me/ns/fb#
 <li>
 <a href="logo.png" class="thumbnail image-reference img-responsive" title="Logo">
                     <img src="logo.thumbnail.png" alt="Logo"></a>
+                </li>
+<li>
+<a href="logo_pq.png" class="thumbnail image-reference img-responsive" title="Logo pq">
+                    <img src="logo_pq.thumbnail.png" alt="Logo pq"></a>
         </li>
 </ul>
 </noscript>
@@ -128,29 +132,29 @@ fb: http://ogp.me/ns/fb#
             <script src="../assets/js/all-nocdn.js"></script><script>
                 var links = [
                         {
-                            "icon": "<i class='fa fa-share-square-o'></i>",
                             "bgcolor": "#F44336",
+                            "icon": "<i class='fa fa-share-square-o'></i>",
                         },
                         {
+                            "target": "_blank",
                             "url": "https://twitter.com/",
-                            "target": "_blank",
-                            "icon": "<i class='fa fa-twitter'></i>",
+                            "color": "#fffff",
                             "bgcolor": "#55ACEE",
-                            "color": "#fffff",
+                            "icon": "<i class='fa fa-twitter'></i>",
                         },
                         {
+                            "target": "_blank",
                             "url": "https://github.com/",
-                            "target": "_blank",
-                            "icon": "<i class='fa fa-github-square'></i>",
-                            "bgcolor": "#666666",
                             "color": "#fffff",
+                            "bgcolor": "#666666",
+                            "icon": "<i class='fa fa-github-square'></i>",
                         },
                         {
-                            "url": "https://www.facebook.com",
                             "target": "_blank",
-                            "icon": "<i class='fa fa-facebook'></i>",
-                            "bgcolor": "#3B5998",
+                            "url": "https://www.facebook.com",
                             "color": "#fffff",
+                            "bgcolor": "#3B5998",
+                            "icon": "<i class='fa fa-facebook'></i>",
                         },
                 ];
 
@@ -169,7 +173,7 @@ fb: http://ogp.me/ns/fb#
     moment.locale("en");
     fancydates(1, "YYYY-MM-DD HH:mm");
     </script><!-- end fancy dates --><script src="../assets/js/flowr.plugin.js"></script><script>
-jsonContent = [{"size": {"h": 180, "w": 120}, "title": "Flavio coelho 0", "url": "flavio.coelho_0.jpg", "url_thumb": "flavio.coelho_0.thumbnail.jpg"}, {"size": {"h": 311, "w": 720}, "title": "Site conference ok", "url": "site_conference_ok.png", "url_thumb": "site_conference_ok.thumbnail.png"}, {"size": {"h": 26, "w": 335}, "title": "Logo emap", "url": "logo-emap.png", "url_thumb": "logo-emap.thumbnail.png"}, {"size": {"h": 311, "w": 720}, "title": "Logo", "url": "logo.png", "url_thumb": "logo.thumbnail.png"}];
+jsonContent = [{"size": {"h": 180, "w": 120}, "title": "Flavio coelho 0", "url": "flavio.coelho_0.jpg", "url_thumb": "flavio.coelho_0.thumbnail.jpg"}, {"size": {"h": 311, "w": 720}, "title": "Site conference ok", "url": "site_conference_ok.png", "url_thumb": "site_conference_ok.thumbnail.png"}, {"size": {"h": 26, "w": 335}, "title": "Logo emap", "url": "logo-emap.png", "url_thumb": "logo-emap.thumbnail.png"}, {"size": {"h": 311, "w": 720}, "title": "Logo", "url": "logo.png", "url_thumb": "logo.thumbnail.png"}, {"size": {"h": 173, "w": 400}, "title": "Logo pq", "url": "logo_pq.png", "url_thumb": "logo_pq.thumbnail.png"}];
 $("#gallery_container").flowr({
         data : jsonContent,
         height : 180*.6,
