--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@ fb: http://ogp.me/ns/fb#
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Mathematical Epidemiology | Mathematical Epidemiology</title>
 <link href="assets/css/all-nocdn.css" rel="stylesheet" type="text/css">
-<link rel="alternate" type="application/rss+xml" title="RSS (pt)" href="pt/rss.xml">
 <link rel="alternate" type="application/rss+xml" title="RSS (es)" href="es/rss.xml">
 <link rel="alternate" type="application/rss+xml" title="RSS (en)" href="rss.xml">
+<link rel="alternate" type="application/rss+xml" title="RSS (pt)" href="pt/rss.xml">
 <link rel="canonical" href="https://Epidemiologia.github.io/">
 <meta property="fb:app_id" content="">
 <!--[if lt IE 9]>
@@ -37,8 +37,7 @@ fb: http://ogp.me/ns/fb#
  
             <h1 class="title-blog">
                 <a href="https://Epidemiologia.github.io/">
-                        <img src="galleries/logo_pq.png" alt="Mathematical Epidemiology" id="logo"><span id="blog-title">Mathematical Epidemiology</span>
-                    </a>
+                        <img src="galleries/logo_pq.png" alt="Mathematical Epidemiology" id="logo"></a>
             </h1>
           </div>
         </div>
@@ -58,8 +57,8 @@ fb: http://ogp.me/ns/fb#
                 </ul>
 <ul class="nav navbar-nav">
 <li>            </li>
-<li><a href="https://Epidemiologia.github.io/pt/" rel="alternate" hreflang="pt">Português</a></li>
-            <li><a href="https://Epidemiologia.github.io/es/" rel="alternate" hreflang="es">Español</a></li>
+<li><a href="https://Epidemiologia.github.io/es/" rel="alternate" hreflang="es">Español</a></li>
+            <li><a href="https://Epidemiologia.github.io/pt/" rel="alternate" hreflang="pt">Português</a></li>
 
                     
                 </ul></nav><div class="posts-material col-xs-9">
@@ -146,29 +145,29 @@ fb: http://ogp.me/ns/fb#
             <script src="assets/js/all-nocdn.js"></script><script>
                 var links = [
                         {
-                            "bgcolor": "#F44336",
                             "icon": "<i class='fa fa-share-square-o'></i>",
+                            "bgcolor": "#F44336",
                         },
                         {
-                            "target": "_blank",
                             "url": "https://twitter.com/",
+                            "icon": "<i class='fa fa-twitter'></i>",
                             "color": "#fffff",
                             "bgcolor": "#55ACEE",
-                            "icon": "<i class='fa fa-twitter'></i>",
+                            "target": "_blank",
                         },
                         {
-                            "target": "_blank",
                             "url": "https://github.com/",
+                            "icon": "<i class='fa fa-github-square'></i>",
                             "color": "#fffff",
                             "bgcolor": "#666666",
-                            "icon": "<i class='fa fa-github-square'></i>",
+                            "target": "_blank",
                         },
                         {
-                            "target": "_blank",
                             "url": "https://www.facebook.com",
+                            "icon": "<i class='fa fa-facebook'></i>",
                             "color": "#fffff",
                             "bgcolor": "#3B5998",
-                            "icon": "<i class='fa fa-facebook'></i>",
+                            "target": "_blank",
                         },
                 ];
 
