Nikola auto commit.
Source commit: c40da0a9d7a1dd862b3ff3d79bfd76eb2669ba5c
Nikola version: 7.7.5

--- a/archive.html
+++ b/archive.html
@@ -55,7 +55,9 @@
     <aside class="sidebar"><aside class="sidebar thirds"></aside></aside>
 </div>
 </div>
-<footer role="contentinfo"><p>    Contents © 2016         <a href="mailto:fccoelho@fgv.br">The Mathematical Epidemiology research group</a> - Powered by         <a href="https://getnikola.com" rel="nofollow">Nikola</a>           </p>
+<footer role="contentinfo"><p>    Contents © 2016         <a href="mailto:fccoelho@fgv.br">The Mathematical Epidemiology research group</a> - Powered by         <a href="https://getnikola.com" rel="nofollow">Nikola</a>         
+<a rel="license" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">
+<img alt="Creative Commons License BY-NC-SA" style="border-width:0; margin-bottom:12px;" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png"></a>  </p>
 </footer><script src="assets/js/cookiechoices.js"></script><script>
   document.addEventListener('DOMContentLoaded', function(event) {
   cookieChoices.showCookieConsentBar(
