Nikola auto commit.
Source commit: 46dfea197316c1825cf26803f37168e44df43b78
Nikola version: v7.7.6

--- a/es/galleries/index.html
+++ b/es/galleries/index.html
@@ -70,6 +70,14 @@
 <li>
 <a href="../../galleries/logo_pq.png" class="thumbnail image-reference" title="Logo pq">
             <img src="../../galleries/logo_pq.thumbnail.png" alt="Logo pq"></a>
+        </li>
+<li>
+<a href="../../galleries/soledad-150x225.jpg" class="thumbnail image-reference" title="Soledad 150x225">
+            <img src="../../galleries/soledad-150x225.thumbnail.jpg" alt="Soledad 150x225"></a>
+        </li>
+<li>
+<a href="../../galleries/Sabrina.jpg" class="thumbnail image-reference" title="Sabrina">
+            <img src="../../galleries/Sabrina.thumbnail.jpg" alt="Sabrina"></a>
 </li>
 </ul>
 </noscript>
