--- a/galleries/index.html
+++ b/galleries/index.html
@@ -70,6 +70,14 @@
 <li>
 <a href="logo_pq.png" class="thumbnail image-reference" title="Logo pq">
             <img src="logo_pq.thumbnail.png" alt="Logo pq"></a>
+        </li>
+<li>
+<a href="soledad-150x225.jpg" class="thumbnail image-reference" title="Soledad 150x225">
+            <img src="soledad-150x225.thumbnail.jpg" alt="Soledad 150x225"></a>
+        </li>
+<li>
+<a href="Sabrina.jpg" class="thumbnail image-reference" title="Sabrina">
+            <img src="Sabrina.thumbnail.jpg" alt="Sabrina"></a>
 </li>
 </ul>
 </noscript>
