--- a/es/stories/team/index.html
+++ b/es/stories/team/index.html
@@ -12,9 +12,9 @@ fb: http://ogp.me/ns/fb#
 <link href="../../../assets/css/main.css" rel="stylesheet" type="text/css">
 <link href="../../../assets/css/rst.css" rel="stylesheet" type="text/css">
 <link href="../../../assets/css/code.css" rel="stylesheet" type="text/css">
+<link rel="alternate" type="application/rss+xml" title="RSS (pt)" href="../../../pt/rss.xml">
 <link rel="alternate" type="application/rss+xml" title="RSS (en)" href="../../../rss.xml">
 <link rel="alternate" type="application/rss+xml" title="RSS (es)" href="../../rss.xml">
-<link rel="alternate" type="application/rss+xml" title="RSS (pt)" href="../../../pt/rss.xml">
 <link rel="canonical" href="https://Epidemiologia.github.io/es/stories/team/">
 <meta property="fb:app_id" content="fccoelho">
 <!--[if lt IE 9]><script src="/assets/js/html5.js"></script><![endif]--><meta name="author" content="The Mathematical Epidemiology research group">
@@ -60,12 +60,12 @@ I Most commonly work with Problems derived from ">
             <li><a href="../../../archive.html" title="Archives"><i class="icon-folder-open-alt"></i></a></li>
             <li><a href="../../../categories/index.html" title="Tags"><i class="icon-tags"></i></a></li>
             <li><a href="../../../rss.xml" title="RSS"><i class="icon-rss"></i></a></li>
-            <li><a href="https://emap.fgv.br" title="About us"><i class="icon-user"></i></a></li>
+            <li><a href="http://emap.fgv.br" title="About us"><i class="icon-user"></i></a></li>
             <li><a href="https://twitter.com/fccoelho" title="My Twitter"><i class="icon-twitter"></i></a></li>
             <li><a href="https://github.com/fccoelho" title="My Github"><i class="icon-github"></i></a></li>
 
         </ul></section><section class="page-content"><div class="content" rel="main">
-<article class="storypage" itemscope="itemscope" itemtype="http://schema.org/Article"><header><h1 class="p-name entry-title" itemprop="headline name">Research team</h1>
+<article class="storypage" itemscope="itemscope" itemtype="http://schema.org/Article"><header><h3 class="p-name entry-title" itemprop="headline name">Research team</h3>
 
                         <a href="../../../stories/team/" rel="alternate" hreflang="en">
                 English</a>
