--- a/pt/galleries/index.html
+++ b/pt/galleries/index.html
@@ -12,9 +12,9 @@ fb: http://ogp.me/ns/fb#
 <link href="../../assets/css/main.css" rel="stylesheet" type="text/css">
 <link href="../../assets/css/rst.css" rel="stylesheet" type="text/css">
 <link href="../../assets/css/code.css" rel="stylesheet" type="text/css">
+<link rel="alternate" type="application/rss+xml" title="RSS (pt)" href="../rss.xml">
 <link rel="alternate" type="application/rss+xml" title="RSS (en)" href="../../rss.xml">
 <link rel="alternate" type="application/rss+xml" title="RSS (es)" href="../../es/rss.xml">
-<link rel="alternate" type="application/rss+xml" title="RSS (pt)" href="../rss.xml">
 <link rel="canonical" href="https://Epidemiologia.github.io/pt/galleries/">
 <meta property="fb:app_id" content="fccoelho">
 <!--[if lt IE 9]><script src="/assets/js/html5.js"></script><![endif]--><link rel="alternate" type="application/rss+xml" title="RSS" href="rss.xml">
@@ -31,7 +31,7 @@ fb: http://ogp.me/ns/fb#
             <li><a href="../../archive.html" title="Archives"><i class="icon-folder-open-alt"></i></a></li>
             <li><a href="../../categories/index.html" title="Tags"><i class="icon-tags"></i></a></li>
             <li><a href="../../rss.xml" title="RSS"><i class="icon-rss"></i></a></li>
-            <li><a href="https://emap.fgv.br" title="About us"><i class="icon-user"></i></a></li>
+            <li><a href="http://emap.fgv.br" title="About us"><i class="icon-user"></i></a></li>
             <li><a href="https://twitter.com/fccoelho" title="My Twitter"><i class="icon-twitter"></i></a></li>
             <li><a href="https://github.com/fccoelho" title="My Github"><i class="icon-github"></i></a></li>
 
@@ -41,32 +41,32 @@ fb: http://ogp.me/ns/fb#
 </ul></nav><h1>galleries</h1>
     <ul class="thumbnails">
 <li>
-<a href="../../galleries/site_conference_ok.png" class="thumbnail image-reference" title="Site conference ok">
-                <img src="../../galleries/site_conference_ok.thumbnail.png" alt="Site conference ok"></a>
-            </li>
-<li>
-<a href="../../galleries/logo.png" class="thumbnail image-reference" title="Logo">
-                <img src="../../galleries/logo.thumbnail.png" alt="Logo"></a>
-            </li>
-<li>
-<a href="../../galleries/soledad-150x225.jpg" class="thumbnail image-reference" title="Soledad 150x225">
-                <img src="../../galleries/soledad-150x225.thumbnail.jpg" alt="Soledad 150x225"></a>
-            </li>
-<li>
 <a href="../../galleries/flavio.coelho_0.jpg" class="thumbnail image-reference" title="Flavio coelho 0">
                 <img src="../../galleries/flavio.coelho_0.thumbnail.jpg" alt="Flavio coelho 0"></a>
             </li>
 <li>
-<a href="../../galleries/Sabrina.jpg" class="thumbnail image-reference" title="Sabrina">
-                <img src="../../galleries/Sabrina.thumbnail.jpg" alt="Sabrina"></a>
+<a href="../../galleries/site_conference_ok.png" class="thumbnail image-reference" title="Site conference ok">
+                <img src="../../galleries/site_conference_ok.thumbnail.png" alt="Site conference ok"></a>
             </li>
 <li>
 <a href="../../galleries/logo-emap.png" class="thumbnail image-reference" title="Logo emap">
                 <img src="../../galleries/logo-emap.thumbnail.png" alt="Logo emap"></a>
             </li>
 <li>
+<a href="../../galleries/logo.png" class="thumbnail image-reference" title="Logo">
+                <img src="../../galleries/logo.thumbnail.png" alt="Logo"></a>
+            </li>
+<li>
 <a href="../../galleries/logo_pq.png" class="thumbnail image-reference" title="Logo pq">
                 <img src="../../galleries/logo_pq.thumbnail.png" alt="Logo pq"></a>
+            </li>
+<li>
+<a href="../../galleries/soledad-150x225.jpg" class="thumbnail image-reference" title="Soledad 150x225">
+                <img src="../../galleries/soledad-150x225.thumbnail.jpg" alt="Soledad 150x225"></a>
+            </li>
+<li>
+<a href="../../galleries/Sabrina.jpg" class="thumbnail image-reference" title="Sabrina">
+                <img src="../../galleries/Sabrina.thumbnail.jpg" alt="Sabrina"></a>
     </li>
 </ul>
 <footer id="footer"><p>Contents © 2016         <a href="mailto:fccoelho@fgv.br">The Mathematical Epidemiology research group</a> - Powered by         <a href="https://getnikola.com" rel="nofollow">Nikola</a>         
